--- a/app/views/lings/mass_assignment/_value.html.haml
+++ b/app/views/lings/mass_assignment/_value.html.haml
@@ -18,7 +18,7 @@
               .input-group
                 %span.input-group-addon
                   = radio_button_tag "value", "value_new"
-                %input.form-control{:type => "text", :name => "new_value", :placeholder => "or Add a New One"}
+                %input#new_value.form-control{:type => "text", :name => "new_value", :placeholder => "or Add a New One"}
     #value-sureness-box.alert.alert-info
       %h4 To save this value think:
       %h4
