fixed problem with 'active' string

--- a/app/views/lings/mass_assignment/_value.html.haml
+++ b/app/views/lings/mass_assignment/_value.html.haml
@@ -26,11 +26,11 @@
       #value-sureness.form-group{:name => "value_sureness", :style => "margin-top: 25px; padding-bottom: 10px;"}
         .btn-group.btn-group-justified
           .btn-group
-            %button.btn.btn-default#sureness_certain{ :name => "value_sureness", :value => "certain", :class => "#{active if @ling_properties && @ling_properties.select {|lp| lp.sureness == "certain"}.any?}" } Certain
+            %button.btn.btn-default#sureness_certain{ :name => "value_sureness", :value => "certain", :class => "#{'active' if @ling_properties && @ling_properties.select {|lp| lp.sureness == "certain"}.any?}" } Certain
           .btn-group
-            %button.btn.btn-default#sureness_revisit{ :name => "value_sureness", :value => "revisit", :class => "#{active if @ling_properties && @ling_properties.select {|lp| lp.sureness == "revisit"}.any?}" } Revisit
+            %button.btn.btn-default#sureness_revisit{ :name => "value_sureness", :value => "revisit", :class => "#{'active' if @ling_properties && @ling_properties.select {|lp| lp.sureness == "revisit"}.any?}" } Revisit
           .btn-group
-            %button.btn.btn-default#sureness_need_help{ :name => "value_sureness", :value => "need_help", :class => "#{active if @ling_properties && @ling_properties.select {|lp| lp.sureness == "need_help"}.any?}" } Need help
+            %button.btn.btn-default#sureness_need_help{ :name => "value_sureness", :value => "need_help", :class => "#{'active' if @ling_properties && @ling_properties.select {|lp| lp.sureness == "need_help"}.any?}" } Need Help
       .pull-right{:style => "margin-top: -5px;"}
         .green.hide.strong
           = icon 'check', 'Saved', :id => "value-saved-success"
