--- a/app/views/searches/_save_search_form.html.haml
+++ b/app/views/searches/_save_search_form.html.haml
@@ -28,7 +28,8 @@
               .form-group
                 .col-md-8
                   = f.hidden_field :query_json
-                  = f.hidden_field :result_groups_json
+                  - if @result_groups.present?
+                    = f.hidden_field :result_groups_json
             .modal-footer
               / %button.btn{:data => {:dismiss => "modal"}, :aria => { :hidden => "true" }} Close
               = f.submit "Save", :id => "save-search", :class => "btn btn-success", :data => {:loading_text => "Savings..." }
