--- a/app/views/examples_lings_properties/_index_partial.html.haml
+++ b/app/views/examples_lings_properties/_index_partial.html.haml
@@ -5,7 +5,7 @@
   %tr
     %th= current_group.example_name
     %th= current_group.lings_property_name
-    - if can_see? :destroy, @examples_lings_properties
+    - if can_see_header? [:destroy], @examples_lings_properties
       %th
   - @examples_lings_properties.each do |examples_lings_property|
     %tr
