--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -3,7 +3,7 @@
   .col-md-12
     = link_to group_categories_path(current_group), :class => "btn btn-default" do
       = icon 'arrow-left'
-    -if can_see?(:manage, @category)
+    -if can_see? :update, @category
       .pull-right
         = link_to edit_group_category_path(current_group, @category), :class => "btn btn-default", :rel => "tooltip", :title => "Edit #{@category.name}", :data => {:toggle => "tooltip", :animation => "true"} do
           = icon 'edit'
