--- a/app/views/lings/depth.html.haml
+++ b/app/views/lings/depth.html.haml
@@ -3,7 +3,7 @@
 .row
   .col-md-6
     %h1 Listing #{name.pluralize}
-  .col-md-6
+  #ling_settings.col-md-6
     .row{:style => "margin-top: 30px;"}
       .col-md-10
         %input#ling-search-field.form-control{:autocomplete => "off", :placeholder => "Loading...", :type => "text"}
