--- a/app/views/lings/mass_assignment/_value.html.haml
+++ b/app/views/lings/mass_assignment/_value.html.haml
@@ -12,7 +12,7 @@
               = radio_button_tag "value", value, 
                 @preexisting_values.select{|lp| lp.property == @property && lp.value == value}.first
               = value
-        - if can_see? :manage, @ling
+        - if can_see? :create, @ling
           .row
             .col-md-12
               .input-group
@@ -59,7 +59,9 @@
     %div{:style => "margin: 10px 0 0 0; min-height: 15px; *height: 15px;"}
       %span#example-warning.blue.italic{:class => "#{'hidden' unless @exists}"} You must set a value before creating examples 
     #prop-example-creator{:style => "margin-top: 10px;"}
-      %a#example-create{:class => "btn btn-success #{@exists ? "enabled" : "disabled"}", :href => "#"} 
-        = icon 'plus', 'Create Example'
-      %a#example-change{:class => "btn btn-default #{@examples.present? ? "enabled" : "disabled"}", :href => "#"}
-        =icon 'edit', 'Change Example'
+      - if can_see? :create, @ling
+        %a#example-create{:class => "btn btn-success #{@exists ? "enabled" : "disabled"}", :href => "#"} 
+          = icon 'plus', 'Create Example'
+      - if can_see? :update, @ling
+        %a#example-change{:class => "btn btn-default #{@examples.present? ? "enabled" : "disabled"}", :href => "#"}
+          =icon 'edit', 'Change Example'
