--- a/app/views/memberships/_index_partial.html.haml
+++ b/app/views/memberships/_index_partial.html.haml
@@ -5,14 +5,14 @@
   %tr
     %th.col-sm-8 Member
     %th Level
-    - if can_see? :manage, @memberships
+    - if can_see_header? [:manage], @memberships
       %th.col-sm-2 Actions
   - @memberships.each do |membership|
     %tr
       %td= link_to membership.member.name, [current_group, membership]
       %td= membership.level
       - if can_see? :manage, membership
-        %td
+        %td.membership_actions
           = link_to edit_group_membership_path(current_group, membership), :class => 'btn btn-default', :rel => "tooltip", :title => "Edit", :data => {:toggle => "tooltip", :animation => "true"} do
             = icon 'edit'
           - if can_see? :destroy, membership
