--- a/app/views/memberships/index.html.haml
+++ b/app/views/memberships/index.html.haml
@@ -2,7 +2,7 @@
 .row
   .col-md-6
     %h1 Listing Memberships
-  .col-md-6
+  #membership_settings.col-md-6
     .row{:style => "margin-top: 25px;"}
       .col-md-10
         %input#member-search-field.form-control{:autocomplete => "off", :placeholder => "Loading...", :type => "text"}
