--- a/app/views/properties/index.html.haml
+++ b/app/views/properties/index.html.haml
@@ -6,7 +6,7 @@
     .row{:style => "margin-top: 25px;"}
       .col-md-10
         %input#property-search-field.form-control{:autocomplete => "off", :placeholder => "Loading...", :type => "text"}
-      - if can_see? :manage, Property.new{|p| p.group = current_group}
+      - if can_see? :create, Property.new{|p| p.group = current_group}
         .col-md
           = link_to new_group_property_path(current_group), :class => "btn btn-success pull-right",:rel => "tooltip", :title => "New #{current_group.property_name}", :data => {:toggle => "tooltip", :animation => "true", :placement => "left"} do
             = icon "plus"
