--- a/app/views/lings/show.html.haml
+++ b/app/views/lings/show.html.haml
@@ -3,11 +3,11 @@
   .col-md-12
     = link_to group_lings_depth_path(current_group, @ling.depth), :class => "btn btn-default" do
       = icon 'arrow-left'
-    -if can_see?(:manage, @ling)
-      .pull-right#edit-dropdown-menu
-        -if @values_count < 1
-          = link_to supported_set_values_group_ling_path(current_group, @ling), :class => "btn btn-success", :rel => "tooltip", :title => "Add the first #{current_group.lings_property_name}", :data => {:toggle => "tooltip", :animation => "true", :placement => "left"} do
-            = icon 'plus'
+    .pull-right#edit-dropdown-menu
+      -if can_see? :create, @ling && @values_count < 1
+        = link_to supported_set_values_group_ling_path(current_group, @ling), :class => "btn btn-success", :rel => "tooltip", :title => "Add the first #{current_group.lings_property_name}", :data => {:toggle => "tooltip", :animation => "true", :placement => "left"} do
+          = icon 'plus'
+      -if can_see? :update, @ling
         %button#edit-dropdown-button.btn.btn-default.dropdown-toggle{:type => "button", :data => {:toggle => "dropdown"}}
           = icon 'edit'
           %span.caret
@@ -148,16 +148,18 @@
                   = link_to(display_example(example.id, current_group.display_style), [current_group, example]) if elp
                   %br
             - else
-              %td
-                - if can_see?(:manage, @ling)
+              %td.example_actions
+                - if can_see? :create, @ling
                   = link_to supported_set_values_group_ling_path(current_group, @ling, :prop_id => value.property.id, :commit => "Select", :anchor => "prop-example"), :class => "btn btn-success pull-right", :rel => "tooltip", :title => "New #{@group.example_name}", :data => {:toggle => "tooltip", :animation => "true" } do
                     = icon 'plus'
-            %td
-              - if can_see?(:manage, @ling)
-                = link_to supported_set_values_group_ling_path(current_group, @ling, :prop_id => value.property.id, :commit => "Select", :anchor => "value-select"), :class => "btn btn-default", :rel => "tooltip", :title => "Edit #{current_group.lings_property_name}", :data => {:toggle => "tooltip", :animation => "true" } do
-                  = icon 'edit'
-                = link_to [current_group, value], :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-danger', :rel => "tooltip", :title => "Delete", :data => {:toggle => "tooltip", :animation => "true"} do
-                  = icon 'trash-o'
+            - if can_see_any? [:update, :destroy], @ling
+              %td.ling_property_actions
+                - if can_see? :update, @ling
+                  = link_to supported_set_values_group_ling_path(current_group, @ling, :prop_id => value.property.id, :commit => "Select", :anchor => "value-select"), :class => "btn btn-default", :rel => "tooltip", :title => "Edit #{current_group.lings_property_name}", :data => {:toggle => "tooltip", :animation => "true" } do
+                    = icon 'edit'
+                - if can_see? :destroy, @ling
+                  = link_to [current_group, value], :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-danger', :rel => "tooltip", :title => "Delete", :data => {:toggle => "tooltip", :animation => "true"} do
+                    = icon 'trash-o'
     #pagination_bottom.apple_pagination.will-paginate
       / render page links in the view:
       = will_paginate @values, renderer: BootstrapPagination::Rails
