--- a/app/views/properties/index.html.haml
+++ b/app/views/properties/index.html.haml
@@ -2,7 +2,7 @@
 .row
   .col-md-6
     %h1 Listing #{current_group.property_name.pluralize}
-  .col-md-6
+  #property_settings.col-md-6
     .row{:style => "margin-top: 25px;"}
       .col-md-10
         %input#property-search-field.form-control{:autocomplete => "off", :placeholder => "Loading...", :type => "text"}
