--- a/app/views/lings/_depth_table.html.haml
+++ b/app/views/lings/_depth_table.html.haml
@@ -37,9 +37,9 @@
         .strong
           %a{:href => "#", :rel => "tooltip", :title => label, :data => {:toggle => "tooltip", :placement => "left" } }
             =icon number_to_icon_name(percentage), '', :class => "fa-2x #{number_to_text_class(percentage)}"
-      - if can_see_header? [:update, :destroy],lings
-        %td
-          -if can_see? :update, ling
+      - if can_see_header? [:update, :destroy], lings
+        %td{:id => table_actions_id(ling.name)}
+          - if can_see? :update, ling
             = link_to edit_group_ling_path(current_group, ling), :class => 'btn btn-default', :rel => "tooltip", :title => "Edit", :data => {:toggle => "tooltip", :animation => "true"} do
               = icon 'edit'
           - if can_see? :destroy, ling
