--- a/app/views/lings/show.html.haml
+++ b/app/views/lings/show.html.haml
@@ -133,7 +133,7 @@
         %th.col-md-2= current_group.property_name
         %th.col-md-2= current_group.lings_property_name
         %th.col-md= current_group.example_name.pluralize
-        - if can_see_any? [:update, :create, :destroy], @ling
+        - if can_see? :update, @ling
           %th.col-md-2 Actions
       %tbody
         - @values.each do |value|
@@ -148,18 +148,16 @@
                   = link_to(display_example(example.id, current_group.display_style), [current_group, example]) if elp
                   %br
             - else
-              %td.example_actions
-                - if can_see? :create, @ling
+              %td{:id => table_actions_id(value.property.name, "example")}
+                - if can_see? :update, @ling
                   = link_to supported_set_values_group_ling_path(current_group, @ling, :prop_id => value.property.id, :commit => "Select", :anchor => "prop-example"), :class => "btn btn-success pull-right", :rel => "tooltip", :title => "New #{@group.example_name}", :data => {:toggle => "tooltip", :animation => "true" } do
                     = icon 'plus'
-            - if can_see_any? [:update, :destroy], @ling
-              %td.ling_property_actions
-                - if can_see? :update, @ling
-                  = link_to supported_set_values_group_ling_path(current_group, @ling, :prop_id => value.property.id, :commit => "Select", :anchor => "value-select"), :class => "btn btn-default", :rel => "tooltip", :title => "Edit #{current_group.lings_property_name}", :data => {:toggle => "tooltip", :animation => "true" } do
-                    = icon 'edit'
-                - if can_see? :destroy, @ling
-                  = link_to [current_group, value], :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-danger', :rel => "tooltip", :title => "Delete", :data => {:toggle => "tooltip", :animation => "true"} do
-                    = icon 'trash-o'
+            - if can_see? :update, @ling
+              %td{:id => table_actions_id(value.property.name)}
+                = link_to supported_set_values_group_ling_path(current_group, @ling, :prop_id => value.property.id, :commit => "Select", :anchor => "value-select"), :class => "btn btn-default", :rel => "tooltip", :title => "Edit #{current_group.lings_property_name}", :data => {:toggle => "tooltip", :animation => "true" } do
+                  = icon 'edit'
+                = link_to_delete_property value, :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-danger', :rel => "tooltip", :title => "Delete", :data => {:toggle => "tooltip", :animation => "true"} do
+                  = icon 'trash-o'
     #pagination_bottom.apple_pagination.will-paginate
       / render page links in the view:
       = will_paginate @values, renderer: BootstrapPagination::Rails
