--- a/app/views/properties/_index_partial.html.haml
+++ b/app/views/properties/_index_partial.html.haml
@@ -26,12 +26,12 @@
             %a{:href => "#", :rel => "tooltip", :title => label, :data => {:toggle => "tooltip", :placement => "left" } }
               =icon number_to_icon_name(percentage), '', :class => "fa-2x #{number_to_text_class(percentage)}"
         - if can_see_any? [:update,:destroy], property
-          %td
+          %td{:id => table_actions_id(property.name)}
             - if can_see? :update, property
               = link_to edit_group_property_path(current_group, property), :class => 'btn btn-default', :rel => "tooltip", :title => "Edit", :data => {:toggle => "tooltip", :animation => "true"} do
                 = icon 'edit'
             - if can_see? :destroy, property
-              = link_to [current_group, property], :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-danger', :rel => "tooltip", :title => "Delete", :data => {:toggle => "tooltip", :animation => "true"} do
+              = link_to_delete_property property, :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-danger', :rel => "tooltip", :title => "Delete", :data => {:toggle => "tooltip", :animation => "true"} do
                 = icon 'trash-o'
 
   #pagination_bottom.apple_pagination.will-paginate
